--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=""
-export_path="C:/Users/green/Desktop/XIVCT_Beta/XIVCT_Beta_v1.0_Windows.exe"
+export_path="C:/Users/green/Desktop/XIVCT_Beta/XIVCT_v1.1/XIVCT_Beta_v1.1_Windows.exe"
 patch_list=PoolStringArray( "res://XIVCT_Beta/XIVCT_Beta_v0.9.pck*" )
 script_export_mode=1
 script_encryption_key=""
@@ -22,13 +22,13 @@ texture_format/no_bptc_fallbacks=true
 binary_format/64_bits=true
 custom_template/release=""
 custom_template/debug=""
-application/icon=""
-application/file_version="1.0"
+application/icon="res://Icon.ico"
+application/file_version="1.1"
 application/product_version=""
 application/company_name="Peter de Vroom"
-application/product_name="XIVCT Beta v1.0"
+application/product_name="XIVCT v1.1"
 application/file_description=""
-application/copyright=""
+application/copyright="Peter de Vroom, 2019"
 application/trademarks=""
 
 [preset.1]
@@ -40,7 +40,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=""
-export_path="C:/Users/green/Desktop/XIVCT_Beta/XIVCT_Beta_1.0_OSX/FFClock.zip"
+export_path="C:/Users/green/Desktop/XIVCT_Beta/FFClock.zip"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
@@ -71,7 +71,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter="*.json"
 exclude_filter=""
-export_path="C:/Users/green/Desktop/XIVCT_Beta/XIVCT_Beta_v1.0.x86_64"
+export_path="C:/Users/green/Desktop/XIVCT_Beta/XIVCT_v1.1/XIVCT_v1.1.x86_64"
 patch_list=PoolStringArray(  )
 script_export_mode=1
 script_encryption_key=""
